@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Lingua-AR-Word
-version:      1.5.3
+version:      1.5.4
 version_from: lib/Lingua/AR/Word.pm
 installdirs:  site
 requires:
