@@ -10,7 +10,9 @@ sub stem{
 	my $stem;
 	my $word=shift;
 	
-	#let's strip down every prefix and suffix I'm aware of
+	#let's strip down every prefix and suffix I'm aware of.
+	#(actually suffixes relative to people like possessive adjs are NOT chopped)
+
 	if($word=~/^(	#the prefixes
 		[وفب]*ال|
 		[بيلمتوسن]*ت|
@@ -140,6 +142,12 @@ $stem=Lingua::AR::Word::stem(ARABIC_WORD_IN_UTF8);
 
 This module will take care of finding the stem of an Arabic word, through chopping the prefixes and suffixes of the word and by taking away unnecessary letters in the middle of the word.
 
+
+=head1 TODO
+
+Actually suffixes relative to people like possessive adjs are NOT chopped.
+I need to think of a way to chop them AND let the user know they were recognized.
+This way the user is helped in his translation work.
 
 =head1 AUTHOR
 
